# stock-core

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  LICENSE  Makefile.am  README.md  configure.ac  libstockconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
ci/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh
contrib/: README.md  gitian-build.sh  qt_translations.py  stock-cli.bash-completion  stock-qt.pro  stock-tx.bash-completion  stressor_dao.sh  (+4 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  daoversionbit.cpp  daoversionbit.h  dbwrapper.h  fs.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  (+62 more)
src/bench/: .gitignore  bench.h
src/bls/: CMakeLists.txt
src/blsct/: aggregationsession.cpp  aggregationsession.h  bulletproofs.cpp  bulletproofs.h  ephemeralserver.cpp  ephemeralserver.h  key.h  p2pmessage.cpp  rpc.cpp  rpc.h  scalar.cpp  scalar.h  transaction.cpp  transaction.h  types.cpp  types.h  verification.cpp  verification.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  dao.cpp  dao.h  daoconsensusparams.h  merkle.cpp  merkle.h  params.h  program_actions.h  programs.cpp  programs.h  validation.h
src/consensus/dao/: flags.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/ctokens/: ctokens.h  tokenutxos.h
src/dotodyns/: namedata.h  namerecord.h  names.cpp  names.h
src/mcl/: CMakeLists.txt
src/mnemonic/: dictionary.h  generateseed.cpp  generateseed.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  aggregationsession.cpp  aggregationsession.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  coldstakingwizard.cpp  communityfundcreatepaymentrequestdialog.cpp  communityfundcreateproposaldialog.cpp  communityfunddisplay.cpp  communityfunddisplaydetailed.cpp  communityfunddisplaypaymentrequest.cpp  communityfunddisplaypaymentrequestdetailed.cpp  communityfundpage.cpp  communityfundsuccessdialog.cpp  csvmodelwriter.h  daoconsultationcreate.cpp  daoconsultationcreate.h  daoconsultationvote.cpp  daoconsultationvote.h  daopage.cpp  daopage.h  daoproposeanswer.cpp  daoproposeanswer.h  daosupport.cpp  daosupport.h  editaddressdialog.cpp  editaddressdialog.h  getaddresstoreceive.cpp  guiconstants.h  guiutil.cpp  guiutil.h  (+82 more)
src/qt/forms/: coincontroldialog.ui  communityfundcreatepaymentrequestdialog.ui  communityfundcreateproposaldialog.ui  communityfunddisplay.ui  communityfunddisplaydetailed.ui  communityfunddisplaypaymentrequest.ui  communityfunddisplaypaymentrequestdetailed.ui  communityfundpage.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  sendcommunityfunddialog.ui  signverifymessagedialog.ui
src/qt/locale/: stock_af.ts  stock_af_ZA.ts  stock_ar.ts  stock_be_BY.ts  stock_bg.ts  stock_bg_BG.ts  stock_ca.ts  stock_ca@valencia.ts  stock_ca_ES.ts  stock_cs.ts  stock_cs_CZ.ts  stock_cy.ts  stock_da.ts  stock_de.ts  stock_el.ts  stock_el_GR.ts  stock_en.ts  stock_en_GB.ts  stock_eo.ts  stock_es.ts  stock_es_AR.ts  stock_es_CL.ts  stock_es_CO.ts  stock_es_DO.ts  stock_es_ES.ts  stock_es_MX.ts  stock_es_UY.ts  stock_es_VE.ts  stock_et.ts  stock_eu_ES.ts  stock_fa.ts  stock_fa_IR.ts  stock_fi.ts  stock_fr.ts  stock_fr_CA.ts  stock_fr_FR.ts  stock_gl.ts  stock_he.ts  stock_hi_IN.ts  stock_hr.ts  (+45 more)
src/qt/res/: stock-qt-res.rc
src/qt/res/themes/: app.qss  shared.qss
src/qt/res/themes/dark/: styles.qss
src/qt/res/themes/light/: styles.qss
src/qt/styles/: dark.cpp  dark.h  light.cpp  light.h
src/qt/test/: test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: interpreter.h  ismine.cpp  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h  stockconsensus.cpp  stockconsensus.h
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  blsct_tests.cpp  blsct_wallet.cpp  bulletproofsrangeproof_tests.cpp  cfund_tests.cpp  cfunddb_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  (+22 more)
src/test/data/: README.md  stock-util-test.json
src/univalue/lib/: univalue_escapes.h
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+288 files in other folders)
